# upload-comparision

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
django_uploader/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
django_uploader/django_uploader/: asgi.py  settings.py  urls.py  wsgi.py
django_uploader/nginx/: Dockerfile
django_uploader/uploadapp/: models.py  urls.py  views.py
django_uploader/uploadapp/migrations/: 0001_initial.py
django_uploader/uploadapp/templates/uploadapp/: file_form.html
ftp_uploader/: Dockerfile  main.py  pyproject.toml
nginx_proxy/: nginx.conf
scripts/: 테스트 호출 스크립트.ipynb
